--- a/fop/build.xml
+++ b/fop/build.xml
@@ -615,7 +615,12 @@ list of possible build targets.
     <include name="xmlgraphics-commons*.jar"/>
   </fileset>
   <target name="transcoder-pkg" depends="remove-cache" description="Generates the jar for the transcoder package for Batik">
-    <exec executable="mvn" dir="${basedir}/..">
+    <exec executable="mvn" dir="${basedir}/../fop-transcoder">
+      <arg value="clean"/>
+      <arg value="install"/>
+      <arg value="-DskipTests"/>
+    </exec>
+    <exec executable="mvn" dir="${basedir}/../fop-transcoder-allinone">
       <arg value="clean"/>
       <arg value="install"/>
       <arg value="-DskipTests"/>
